// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`POST /osc/commands/execute listFiles should respond with results 1`] = `
{
  "_favorite": Any<Boolean>,
  "dateTime": StringMatching /\\^\\[0-9\\]\\{4\\}\\(:\\[0-9\\]\\{2\\}\\)\\{2\\} \\[0-9\\]\\{2\\}\\(:\\[0-9\\]\\{2\\}\\)\\{2\\}/,
  "fileUrl": StringMatching /\\^\\(http\\|https\\):\\\\/\\\\/\\.\\+\\\\/\\.\\+\\\\/\\.\\+\\\\/\\.\\+\\\\\\.JPG/,
  "isProcessed": Any<Boolean>,
  "name": Any<String>,
  "previewUrl": Any<String>,
  "size": Any<Number>,
}
`;

exports[`POST /osc/commands/execute listFiles should respond with results 2`] = `
{
  "_favorite": Any<Boolean>,
  "dateTime": StringMatching /\\^\\[0-9\\]\\{4\\}\\(:\\[0-9\\]\\{2\\}\\)\\{2\\} \\[0-9\\]\\{2\\}\\(:\\[0-9\\]\\{2\\}\\)\\{2\\}/,
  "fileUrl": StringMatching /\\^\\(http\\|https\\):\\\\/\\\\/\\.\\+\\\\/\\.\\+\\\\/\\.\\+\\\\/\\.\\+\\\\\\.JPG/,
  "isProcessed": Any<Boolean>,
  "name": Any<String>,
  "previewUrl": Any<String>,
  "size": Any<Number>,
}
`;

exports[`POST /osc/commands/execute listFiles should respond with results 3`] = `
{
  "_favorite": Any<Boolean>,
  "dateTime": StringMatching /\\^\\[0-9\\]\\{4\\}\\(:\\[0-9\\]\\{2\\}\\)\\{2\\} \\[0-9\\]\\{2\\}\\(:\\[0-9\\]\\{2\\}\\)\\{2\\}/,
  "fileUrl": StringMatching /\\^\\(http\\|https\\):\\\\/\\\\/\\.\\+\\\\/\\.\\+\\\\/\\.\\+\\\\/\\.\\+\\\\\\.JPG/,
  "isProcessed": Any<Boolean>,
  "name": Any<String>,
  "previewUrl": Any<String>,
  "size": Any<Number>,
}
`;

exports[`POST /osc/commands/execute listFiles should respond with results 4`] = `
{
  "_favorite": Any<Boolean>,
  "dateTime": StringMatching /\\^\\[0-9\\]\\{4\\}\\(:\\[0-9\\]\\{2\\}\\)\\{2\\} \\[0-9\\]\\{2\\}\\(:\\[0-9\\]\\{2\\}\\)\\{2\\}/,
  "fileUrl": Any<String>,
  "isProcessed": Any<Boolean>,
  "name": Any<String>,
  "previewUrl": Any<String>,
  "size": Any<Number>,
}
`;

exports[`POST /osc/commands/execute listFiles should respond with results 5`] = `
{
  "_favorite": Any<Boolean>,
  "dateTime": StringMatching /\\^\\[0-9\\]\\{4\\}\\(:\\[0-9\\]\\{2\\}\\)\\{2\\} \\[0-9\\]\\{2\\}\\(:\\[0-9\\]\\{2\\}\\)\\{2\\}/,
  "fileUrl": Any<String>,
  "isProcessed": Any<Boolean>,
  "name": Any<String>,
  "previewUrl": Any<String>,
  "size": Any<Number>,
}
`;

exports[`POST /osc/commands/execute listFiles should respond with results 6`] = `
{
  "_favorite": Any<Boolean>,
  "dateTime": StringMatching /\\^\\[0-9\\]\\{4\\}\\(:\\[0-9\\]\\{2\\}\\)\\{2\\} \\[0-9\\]\\{2\\}\\(:\\[0-9\\]\\{2\\}\\)\\{2\\}/,
  "fileUrl": Any<String>,
  "isProcessed": Any<Boolean>,
  "name": Any<String>,
  "previewUrl": Any<String>,
  "size": Any<Number>,
}
`;

exports[`POST /osc/commands/execute listFiles should respond with results 7`] = `
{
  "name": "camera.listFiles",
  "results": {
    "entries": [],
    "totalEntries": 0,
  },
  "state": "done",
}
`;

exports[`THETA X POST /osc/commands/execute listFiles should respond with results 1`] = `
{
  "_favorite": Any<Boolean>,
  "dateTime": StringMatching /\\^\\[0-9\\]\\{4\\}\\(:\\[0-9\\]\\{2\\}\\)\\{2\\} \\[0-9\\]\\{2\\}\\(:\\[0-9\\]\\{2\\}\\)\\{2\\}/,
  "fileUrl": Any<String>,
  "isProcessed": Any<Boolean>,
  "name": Any<String>,
  "previewUrl": Any<String>,
  "size": Any<Number>,
}
`;

exports[`THETA X POST /osc/commands/execute listFiles should respond with results 2`] = `
{
  "_favorite": Any<Boolean>,
  "dateTime": StringMatching /\\^\\[0-9\\]\\{4\\}\\(:\\[0-9\\]\\{2\\}\\)\\{2\\} \\[0-9\\]\\{2\\}\\(:\\[0-9\\]\\{2\\}\\)\\{2\\}/,
  "fileUrl": Any<String>,
  "isProcessed": Any<Boolean>,
  "name": Any<String>,
  "previewUrl": Any<String>,
  "size": Any<Number>,
}
`;

exports[`THETA X POST /osc/commands/execute listFiles should respond with results 3`] = `
{
  "_favorite": Any<Boolean>,
  "dateTime": StringMatching /\\^\\[0-9\\]\\{4\\}\\(:\\[0-9\\]\\{2\\}\\)\\{2\\} \\[0-9\\]\\{2\\}\\(:\\[0-9\\]\\{2\\}\\)\\{2\\}/,
  "fileUrl": Any<String>,
  "isProcessed": Any<Boolean>,
  "name": Any<String>,
  "previewUrl": Any<String>,
  "size": Any<Number>,
}
`;

exports[`THETA X POST /osc/commands/execute listFiles should respond with results 4`] = `
{
  "_favorite": Any<Boolean>,
  "dateTime": StringMatching /\\^\\[0-9\\]\\{4\\}\\(:\\[0-9\\]\\{2\\}\\)\\{2\\} \\[0-9\\]\\{2\\}\\(:\\[0-9\\]\\{2\\}\\)\\{2\\}/,
  "fileUrl": Any<String>,
  "isProcessed": Any<Boolean>,
  "name": Any<String>,
  "previewUrl": Any<String>,
  "size": Any<Number>,
}
`;

exports[`THETA X POST /osc/commands/execute listFiles should respond with results 5`] = `
{
  "_favorite": Any<Boolean>,
  "dateTime": StringMatching /\\^\\[0-9\\]\\{4\\}\\(:\\[0-9\\]\\{2\\}\\)\\{2\\} \\[0-9\\]\\{2\\}\\(:\\[0-9\\]\\{2\\}\\)\\{2\\}/,
  "fileUrl": Any<String>,
  "isProcessed": Any<Boolean>,
  "name": Any<String>,
  "previewUrl": Any<String>,
  "size": Any<Number>,
}
`;

exports[`THETA X POST /osc/commands/execute listFiles should respond with results 6`] = `
{
  "_favorite": Any<Boolean>,
  "dateTime": StringMatching /\\^\\[0-9\\]\\{4\\}\\(:\\[0-9\\]\\{2\\}\\)\\{2\\} \\[0-9\\]\\{2\\}\\(:\\[0-9\\]\\{2\\}\\)\\{2\\}/,
  "fileUrl": Any<String>,
  "isProcessed": Any<Boolean>,
  "name": Any<String>,
  "previewUrl": Any<String>,
  "size": Any<Number>,
}
`;

exports[`THETA X POST /osc/commands/execute listFiles should respond with results 7`] = `
{
  "name": "camera.listFiles",
  "results": {
    "entries": [],
    "totalEntries": 0,
  },
  "state": "done",
}
`;

exports[`THETA Z1 POST /osc/commands/execute listFiles should respond with results 1`] = `
{
  "_projectionType": StringMatching /\\^\\(Equirectangular\\|Dual-Fisheye\\)/,
  "_thumbSize": Any<Number>,
  "dateTimeZone": StringMatching /\\^\\[0-9\\]\\{4\\}\\(:\\[0-9\\]\\{2\\}\\)\\{2\\} \\[0-9\\]\\{2\\}\\(:\\[0-9\\]\\{2\\}\\)\\{2\\}\\[\\+-\\]\\[0-9\\]\\{2\\}:\\[0-9\\]\\{2\\}/,
  "fileUrl": StringMatching /\\^\\(http\\|https\\):\\\\/\\\\/\\.\\+\\\\/\\.\\+\\\\/\\.\\+\\\\/\\.\\+\\\\/\\.\\+\\\\\\.JPG/,
  "height": Any<Number>,
  "isProcessed": Any<Boolean>,
  "name": Any<String>,
  "previewUrl": Any<String>,
  "size": Any<Number>,
  "thumbnail": Any<String>,
  "width": Any<Number>,
}
`;

exports[`THETA Z1 POST /osc/commands/execute listFiles should respond with results 2`] = `
{
  "_projectionType": StringMatching /\\^\\(Equirectangular\\|Dual-Fisheye\\)/,
  "_thumbSize": Any<Number>,
  "dateTimeZone": StringMatching /\\^\\[0-9\\]\\{4\\}\\(:\\[0-9\\]\\{2\\}\\)\\{2\\} \\[0-9\\]\\{2\\}\\(:\\[0-9\\]\\{2\\}\\)\\{2\\}\\[\\+-\\]\\[0-9\\]\\{2\\}:\\[0-9\\]\\{2\\}/,
  "fileUrl": StringMatching /\\^\\(http\\|https\\):\\\\/\\\\/\\.\\+\\\\/\\.\\+\\\\/\\.\\+\\\\/\\.\\+\\\\/\\.\\+\\\\\\.JPG/,
  "height": Any<Number>,
  "isProcessed": Any<Boolean>,
  "name": Any<String>,
  "previewUrl": Any<String>,
  "size": Any<Number>,
  "thumbnail": Any<String>,
  "width": Any<Number>,
}
`;

exports[`THETA Z1 POST /osc/commands/execute listFiles should respond with results 3`] = `
{
  "_projectionType": StringMatching /\\^\\(Equirectangular\\|Dual-Fisheye\\)/,
  "_thumbSize": Any<Number>,
  "dateTimeZone": StringMatching /\\^\\[0-9\\]\\{4\\}\\(:\\[0-9\\]\\{2\\}\\)\\{2\\} \\[0-9\\]\\{2\\}\\(:\\[0-9\\]\\{2\\}\\)\\{2\\}\\[\\+-\\]\\[0-9\\]\\{2\\}:\\[0-9\\]\\{2\\}/,
  "fileUrl": StringMatching /\\^\\(http\\|https\\):\\\\/\\\\/\\.\\+\\\\/\\.\\+\\\\/\\.\\+\\\\/\\.\\+\\\\/\\.\\+\\\\\\.JPG/,
  "height": Any<Number>,
  "isProcessed": Any<Boolean>,
  "name": Any<String>,
  "previewUrl": Any<String>,
  "size": Any<Number>,
  "thumbnail": Any<String>,
  "width": Any<Number>,
}
`;

exports[`THETA Z1 POST /osc/commands/execute listFiles should respond with results 4`] = `
{
  "_projectionType": StringMatching /\\^\\(Equirectangular\\|Dual-Fisheye\\)/,
  "_thumbSize": Any<Number>,
  "dateTimeZone": StringMatching /\\^\\[0-9\\]\\{4\\}\\(:\\[0-9\\]\\{2\\}\\)\\{2\\} \\[0-9\\]\\{2\\}\\(:\\[0-9\\]\\{2\\}\\)\\{2\\}\\[\\+-\\]\\[0-9\\]\\{2\\}:\\[0-9\\]\\{2\\}/,
  "fileUrl": StringMatching /\\^\\(http\\|https\\):\\\\/\\\\/\\.\\+\\\\/\\.\\+\\\\/\\.\\+\\\\/\\.\\+\\\\/\\.\\+\\\\\\.JPG/,
  "height": Any<Number>,
  "isProcessed": Any<Boolean>,
  "name": Any<String>,
  "previewUrl": Any<String>,
  "size": Any<Number>,
  "width": Any<Number>,
}
`;

exports[`THETA Z1 POST /osc/commands/execute listFiles should respond with results 5`] = `
{
  "_projectionType": StringMatching /\\^\\(Equirectangular\\|Dual-Fisheye\\)/,
  "_thumbSize": Any<Number>,
  "dateTimeZone": StringMatching /\\^\\[0-9\\]\\{4\\}\\(:\\[0-9\\]\\{2\\}\\)\\{2\\} \\[0-9\\]\\{2\\}\\(:\\[0-9\\]\\{2\\}\\)\\{2\\}\\[\\+-\\]\\[0-9\\]\\{2\\}:\\[0-9\\]\\{2\\}/,
  "fileUrl": StringMatching /\\^\\(http\\|https\\):\\\\/\\\\/\\.\\+\\\\/\\.\\+\\\\/\\.\\+\\\\/\\.\\+\\\\/\\.\\+\\\\\\.JPG/,
  "height": Any<Number>,
  "isProcessed": Any<Boolean>,
  "name": Any<String>,
  "previewUrl": Any<String>,
  "size": Any<Number>,
  "width": Any<Number>,
}
`;

exports[`THETA Z1 POST /osc/commands/execute listFiles should respond with results 6`] = `
{
  "_projectionType": StringMatching /\\^\\(Equirectangular\\|Dual-Fisheye\\)/,
  "_thumbSize": Any<Number>,
  "dateTimeZone": StringMatching /\\^\\[0-9\\]\\{4\\}\\(:\\[0-9\\]\\{2\\}\\)\\{2\\} \\[0-9\\]\\{2\\}\\(:\\[0-9\\]\\{2\\}\\)\\{2\\}\\[\\+-\\]\\[0-9\\]\\{2\\}:\\[0-9\\]\\{2\\}/,
  "fileUrl": StringMatching /\\^\\(http\\|https\\):\\\\/\\\\/\\.\\+\\\\/\\.\\+\\\\/\\.\\+\\\\/\\.\\+\\\\/\\.\\+\\\\\\.JPG/,
  "height": Any<Number>,
  "isProcessed": Any<Boolean>,
  "name": Any<String>,
  "previewUrl": Any<String>,
  "size": Any<Number>,
  "width": Any<Number>,
}
`;

exports[`THETA Z1 POST /osc/commands/execute listFiles should respond with results 7`] = `
{
  "name": "camera.listFiles",
  "results": {
    "entries": [],
    "totalEntries": 0,
  },
  "state": "done",
}
`;
